kustomize/base/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-world-cicd
  name: hello-world-cicd
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app: hello-world-cicd
  type: ClusterIP
